test-suite/tests/roundtrip/invalid/semantic/domain_issue/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/domain_issue/03/input.essence:5:41:
  |
5 |     [{2} | l_1 : set (maxSize freq(mset(var1), var1) - (1 - 3) % 1 ** 3) of
  |                                         ^^^^
Cannot use variable of category : decision in the context of Domain

